log
Fri 24 Mar 2023 12:47:52 AM UTC: 
 tests:  0|6
total_score: 0/70
bd6f410
Fri 24 Mar 2023 12:51:38 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List *lista = (List*) malloc (sizeof(List));
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0e93f03
Fri 24 Mar 2023 12:57:34 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4235588
Fri 24 Mar 2023 01:05:42 AM UTC: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:20: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   40 |   *list->current = list->head;
      |                    ^~~~
list.c:39:9: error: unused variable ‘data’ [-Werror=unused-variable]
   39 |   void *data = list->head->data;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
1206505
Fri 24 Mar 2023 01:11:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:9: error: unused variable ‘data’ [-Werror=unused-variable]
   39 |   void *data = list->head->data;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
640ed6e
Fri 24 Mar 2023 01:12:19 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a5cf6b1
Fri 24 Mar 2023 01:12:55 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
591219e
Fri 24 Mar 2023 01:16:32 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
878461d
Fri 24 Mar 2023 01:17:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
49702d1
Fri 24 Mar 2023 01:17:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1b98aba
Fri 24 Mar 2023 01:21:32 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
5c8392a
Fri 24 Mar 2023 01:24:21 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
d18100a
Fri 24 Mar 2023 01:28:01 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
5d200fc
Fri 24 Mar 2023 01:28:14 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
9b28e29
Fri 24 Mar 2023 01:30:00 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
4a80b4f
Fri 24 Mar 2023 01:30:08 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0a6f51e
Fri 24 Mar 2023 01:30:17 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
c541911
Fri 24 Mar 2023 01:31:44 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
416887f
Fri 24 Mar 2023 01:31:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
75d66b4
Fri 24 Mar 2023 01:32:13 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
103bdba
Fri 24 Mar 2023 01:36:13 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
8efb61e
Fri 24 Mar 2023 01:36:30 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
790b483
Fri 24 Mar 2023 01:36:49 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
c979f36
Fri 24 Mar 2023 01:37:13 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
d4e9659
Fri 24 Mar 2023 01:37:19 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
819253e
